--- a/test1.html
+++ b/test1.html
@@ -97,7 +97,7 @@
 				}
 			}
 		function morePressesAgain() {
-			if (pressesPer >= purchaseCostTwo) {
+			if (pressesPer > purchaseCostTwo) {
 				pressesSquared++;
 				pressesPer = pressesPer - purchaseCostTwo;
 				purchaseCostTwo = purchaseCostTwo + (pressesSquared*2);
