--- a/test1.html
+++ b/test1.html
@@ -97,7 +97,7 @@
 				}
 			}
 		function morePressesAgain() {
-			if (pressesPer > purchaseCostTwo-) {
+			if (pressesPer > purchaseCostTwo) {
 				pressesSquared++;
 				pressesPer = pressesPer - purchaseCostTwo;
 				purchaseCostTwo = 20 + (((pressesSquared+1)*2)*(((pressesSquared+1)*2)-1))/2;
